--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "all": "^0.0.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.19.0",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.6",
